--- a/web-dev/it161/css/portal.css
+++ b/web-dev/it161/css/portal.css
@@ -1,27 +1,27 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Jost');
 
 html {
-    background-image:linear-gradient(to right,#07070A, #131319);
+    background-color: #131319;
     color: #f0f0f0;
-    font-family: 'Jost', sans-serif;
-    font-size: 0.95em;
+    font-family: 'Jost', 'Trebuchet', sans-serif;
+    font-size: 1em;
     line-height: 1.5em;
 }
 
 ::selection {
-    color: #000; 
-    background: #a0a1b2;
+    color: #131319; 
+    background: #FB542B;
 }
 
 
 
 h1 {
-    line-height:2.5em;
+    font-size: 2em;
+    line-height: 2em;
     margin: auto;
-    color:#f0f0f0;
+    color: #f0f0f0;
     background: #343546; 
-    font-weight:bold;
+    font-weight: 900;
 }
 div.wrapper {
     background-color: #343546;
@@ -29,14 +29,21 @@ div.wrapper {
 }
 
 p {
-    margin: 1em 1em;
+    margin: 0.5em 1em;
 }
 
 
-h2, h3 {
-    font-weight: normal;
-    margin-left: 1em;
-    line-height: 1em;
+h2 {
+    font-size: 2em;
+    font-weight: bold;
+    margin: 1em;
+
+}
+
+h3 {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 1em;
 }
 
 a {
@@ -45,25 +52,27 @@ a {
 }
 
 a:hover {
-    color: #343546;
+    color: #131319;
     background-color:#FB542B;
     text-decoration: none;
 }
 
-/*
+
 iframe {
     display: block;
     margin: auto;
-    width: 90%;
-    height: 5700px;
-    border: 2px solid darkcyan;
+    padding: 0;
+    width: fit-content;
+    height: fit-content;
+    border: transparent;
 }
-*/
+
 
 footer {
+    display:block;
     clear: both;
     text-align: center;
-    padding: 1em;
+    margin-top: 2em;
 }
 
 /* Responsive rules */
@@ -76,8 +85,8 @@ footer {
     }
     
     h1 {
-        width: 79%;
-        padding-left: 1%;
+        width: 78%;
+        padding-left: 2%;
     }
     
     img.desktop {
@@ -91,7 +100,7 @@ footer {
     }
     
     p {
-        margin: 1em;
+        margin: 0.5em;
     }
 }
 
@@ -103,14 +112,13 @@ footer {
     }
     
     h1 {
-        width: 89%;
-        padding-left: 1%;
+        width: 88%;
+        padding-left: 2%;
     }
     
     img.tablet {
-        width: 40%;
         float: right;
-        margin-left: 1em;
+        width: 30%;
     }
     
     img.desktop, img.phone {
@@ -125,8 +133,8 @@ footer {
     }
     
     h1 {
-        width: 99%;
-        padding-left: 1%;
+        width: 98%;
+        padding-left: 2%;
     }
     
     img.phone {
